# fivetran-cli

./: .gitignore  LICENSE  Makefile  README.md  fivetran  pyproject.toml
src/: api_client.py  cli.py  destination.py  destination_cli.py  group.py  group_cli.py  group_user.py  group_user_cli.py  logger.py  output.py  private_link.py  private_link_cli.py  system_key.py  system_key_cli.py
