[project]
name = "fivetran-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.uv.build-backend]
module-name = "fivetran_cli"
module-root = "src"

[tool.ruff]
line-length = 120
show-fixes = true
src = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]